--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Hello World
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Sunhead Games</title>
+    <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="web.css">
+    <link rel='stylesheet' media='screen and (max-width: 800px)' href='smallwidth.css'>
+  </head>
+  <body>
+    <div class="brand">
+      日 頭 遊 戲<br>
+      Sunhead Games
+    </div>
+    <div class="content">
+      Hello!<br>
+      We come from Taiwan.<br>
+      We made a game called “<a href="http://aridegame.tumblr.com" target=_blank>A Ride into the Mountains</a>”.
+    </div>
+    <div class="contact">
+      Follow us on <a href="http://twitter.com/sunheadgames" target=_blank>Twitter</a>,<br>
+      or maybe you want to <a href="mailto:leekuo@sunheadgames.com">mail</a> us?
+    </div>
+  </body>
+</html>
